TLS handshake timings are not correct
Categories
(Core :: Networking: HTTP, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox132 | --- | fixed |
People
(Reporter: dragana, Assigned: kershaw)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged][necko-priority-queue])
Attachments
(2 files)
Handling of socket notification in nsHttpTransaction is not correct.
| Reporter | ||
Comment 1•3 years ago
|
||
I will not have time to work on this bug, so I am unassigning myself.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 2•2 years ago
|
||
Do we know in what way the notification is not correct?
| Assignee | ||
Comment 3•2 years ago
|
||
(In reply to Randell Jesup [:jesup] (needinfo me) from comment #2)
Do we know in what way the notification is not correct?
Sorry, I haven't looked into this. I'll do this soon.
Comment 4•2 years ago
|
||
Btw, when trying to land bug 1801292 that fixed some of the TLS timings.
| Assignee | ||
Comment 5•2 years ago
|
||
In our current code, we set the timing secureConnectionStart to the time when the HTTP/3 connection is establised here, which is not right.
To fix this, we might need to expose this information from neqo.
Updated•2 years ago
|
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 6•1 year ago
|
||
Having those timings be correct might help with performance profiling.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 7•1 year ago
|
||
Before this patch, TelemetryReportChannel(timedChannel, true) was only called within nsLoadGroup::TelemetryReport() when all requests were completed in the load group.
However, SetDefaultLoadRequest(nullptr) could be called before this, resulting in mDefaultLoadRequest being set to null and causing page load metrics to sometimes not be reported.
To fix this, this patch moves TelemetryReportChannel(timedChannel, true) to the point where mDefaultLoadRequest is completed.
| Assignee | ||
Comment 8•1 year ago
|
||
Depends on D221597
Comment 10•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/dfc31bf59096
https://hg.mozilla.org/mozilla-central/rev/aa6305a65fb5
Description
•