netwerk/base/nsLoadGroup.h
@@ -93,6 +93,7 @@ class nsLoadGroup : public nsILoadGroup,
   nsWeakPtr mParentLoadGroup;
 
   nsresult mStatus{NS_OK};
+  nsresult mDefaultStatus{NS_OK};
   bool mIsCanceling{false};
   bool mDefaultLoadIsTimed{false};
   bool mBrowsingContextDiscarded{false};
